[metadata]
name = ekf_transplant
version = 0.0.1
author = Kevin Angstadt
author_email = kangstadt@stlawu.edu
description = Transplant EKF3 State from on Arudpilot to Another
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kevinaangstadt/exf_transplant
project_urls =
    Bug Tracker = https://github.com/kevinaangstadt/exf_transplant/issues
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = ekf_transplant
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src